environments/prod/overlays/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-frontend-prod
spec:
  selector:
    app: hw-frontend-prod
  ports:
    - name: http
      port: 80
      targetPort: http
